--- a/_lab/README
+++ b/_lab/README
@@ -1,35 +1,72 @@
-PORTS LAB SETUP
+FreeBSD ports lab
 
-- brew install qemu
 
-- consider the guide of running FreeBSD @ qemu @ M1: https://gist.github.com/ctsrc/a1f57933a2cde9abc0f07be12889f97f
-  - tar xvf ~/Downloads/QEMU_EFI-cb438b9-edk2-stable202011-with-extra-resolutions.tar.gz
-  - dd if=/dev/zero of=pflash0.img bs=1m count=64
-  - dd if=/dev/zero of=pflash1.img bs=1m count=64
-  - dd if=QEMU_EFI.fd of=pflash0.img conv=notrunc
-  - dd if=QEMU_VARS.fd of=pflash1.img conv=notrunc
+1 INITIAL SETUP
+---------------
 
-- fetch raw image of CURRENT, e.g. https://download.freebsd.org/snapshots/VM-IMAGES/14.0-CURRENT/aarch64/Latest/FreeBSD-14.0-CURRENT-arm64-aarch64.raw.xz
-- resize it, e.g.: qemu-img resize -f raw FreeBSD-14.0-CURRENT-arm64-aarch64.raw +20G
 
-- the first run and basic preparations:
-  - ./run.sh
-  - echo 'kern.hz=100' >> /boot/loader.conf (decrease CPU load as a guest, see https://docs.freebsd.org/en/books/handbook/virtualization/)
-  - reboot
-  - pkg install git
-  - git clone https://git.freebsd.org/ports.git /usr/ports
-  - see root README for things like $( echo 'DEVELOPER=yes' >> /etc/make.conf )
+1.1 Prepare root disk
 
-- add some conveniences:
-  - tmux
-    - vm# pkg install tmux
-    - bring in my vm:/root/.tmux.conf
-  - ssh
-    - vm# echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config
-    - vm# sysrc sshd_enable=yes
-    - vm# sysrc hostname=portslab
-    - vm# service sshd start
-    - muspel: prepare the respective ssh keys and update .ssh/config
-    - add muspel:~/.ssh/root_portslab.qemu_rsa.pub to vm:/root/.ssh/authorized_keys
-    - host$ ssh portslab
+- fetch an official VM image of a RELEASE (or BETA/RC)
+    - e.g. https://download.freebsd.org/releases/VM-IMAGES/14.0-RC3/aarch64/Latest/FreeBSD-14.0-RC3-arm64-aarch64.qcow2.xz
+- macos$ ln -s FreeBSD-14.0-RC3-arm64-aarch64.qcow2 d0_root.qcow2
+
+
+1.2 Prepare /usr/ports fs
+
+- macos$ qemu-img create -f qcow2 d1_usrports.qcow2 30G
+- macos$ ./run.sh
+
+- $ newfs /dev/vtbd1
+- $ mkdir /usr/ports
+- $ echo '/dev/vtbd1 /usr/ports ufs rw,failok 0 0' >> /etc/fstab
+- $ mount /usr/ports
+
+
+1.3 Prepare SSH access from macOS
+
+- $ echo 'PermitRootLogin yes' >> /etc/ssh/sshd_config
+- $ sysrc sshd_enable=yes
+- $ sysrc hostname=portslab
+- add macos:~/.ssh/root_portslab.qemu_rsa.pub to portslab:/root/.ssh/authorized_keys
+- make sure that macos:~/.ssh/config has the following:
+    Host portslab
+    HostName 127.0.0.1
+    Port 3022
+    User root
+    IdentityFile ~/.ssh/root_portslab.qemu_rsa
+    IdentitiesOnly yes
+- test it:
+  - $ service sshd start
+  - macos$ ssh portslab
+
+
+1.4 Install basic software
+
+- cleanup generic official /etc/rc.conf config (e.g. remove ip6 to avoid autoconf waits during boot etc)
+- $ pkg install devel/git sysutils/tmux
+- macos$ scp ~/.tmux.conf portslab:~/.tmux.conf
+
+
+1.5 Fresh boot test
+
+- $ echo 'autoboot_delay=1' >> /boot/loader.conf
+- $ shutdown -p now
+- macos$ ./run.sh
+
+
+
+2 PREPARE THE SOURCES
+---------------------
+
+
+2.1 Prepare work on the ports
+
+- $ echo 'DEVELOPER=yes' >> /etc/make.conf
+
+- $ cd /usr/ports
+- $ git init .
+- $ git remote add origin https://git.freebsd.org/ports.git
+- $ git fetch
+- $ git checkout main
 
